<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/formContainer"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginTop="@dimen/dp_8"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toTopOf="@id/formBottomGuide"
        app:layout_constraintEnd_toStartOf="@+id/formRightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/formLeftGuide"
        app:layout_constraintTop_toBottomOf="@id/signUpText"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/profilePicBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_72"
                android:onClick="getImageFromPhone"
                android:text="@string/add_photo_text"
                android:textColor="?android:textColorHint"
                android:theme="@style/ButtonStyles"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="16dp" />

            <ImageView
                android:id="@+id/profilePicThumb"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/dp_72"
                android:contentDescription="@string/profile_picture_thumbnail"
                app:layout_constraintBottom_toTopOf="@+id/firstNameText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_melon_48dp" />

            <EditText
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/first_name"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/profilePicBtn" />

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/last_name"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/firstNameText" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/lastNameText" />

            <EditText
                android:id="@+id/occupationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/occupation"
                android:hint="@string/occupation"
                android:inputType="text"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/emailText" />

            <EditText
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/location"
                android:hint="@string/location"
                android:inputType="text"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/occupationText" />

            <Button
                android:id="@+id/dobBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/date_of_birth"
                android:focusable="false"
                android:hint="@string/date_of_birth"
                android:onClick="getDatePicker"
                android:textAlignment="textStart"
                android:textColor="?android:textColorHint"
                android:textSize="@dimen/sp_18"
                android:theme="@style/ButtonStyles"
                app:layout_constraintTop_toBottomOf="@id/locationText" />

            <TextView
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_18"
                app:layout_constraintTop_toBottomOf="@id/dobBtn" />

            <EditText
                android:id="@+id/descText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:autofillHints="@string/description"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/ageText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:onClick="getFormSuccessActivity"
        android:text="@string/submit"
        android:textColor="?android:textColorHint"
        android:textSize="@dimen/sp_18"
        android:theme="@style/ButtonStyles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/formRightGuide"
        app:layout_constraintStart_toStartOf="@+id/formLeftGuide"
        app:layout_constraintTop_toBottomOf="@+id/formContainer" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/formLeftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/form_text_guide_perc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/formBottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/form_text_guide_bperc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/formRightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/form_text_guide_rperc" />

</androidx.constraintlayout.widget.ConstraintLayout>