...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches_placeholder">This is where matches will go</string>
    <string name="settings_placeholder">This is where settings will go</string>
    <string name="s">s</string>
    <string name="sadas">Enter your full name</string>
    <string name="image_of_match">Image of match</string>
    <string name="favorite_button">Favorite button</string>
    <string name="unliked">unliked</string>
    <string name="you_unliked">"You unliked "</string>
    <string name="you_liked">"You liked "</string>
    <string name="exclamation_mark">!</string>
    <string name="switch_public">"Public "</string>
    <string name="switch_private">Private</string>
...
    <string name="max">max</string>
    <string name="min_age_toast">Min age must be between 18 and 99</string>
    <string name="max_age_toast">Max age must be between 18 and 99</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your location is off, turn it on please</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="gps_provider_started">GPS provider started</string>
</resources>

